--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BusinessCard">
         <activity android:name=".ui.AddBusinessCardActivity" />
-        <activity
-            android:name=".ui.MainActivity"
-            android:exported="false">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
